# teaklave

./: CMakeLists.txt  rust-toolchain
rustlib/: x86_64-sgx_sdk-linux-sgx.json
rustlib/panic_abort/src/: lib.rs
rustlib/panic_unwind/src/: lib.rs
rustlib/std/: Cargo.toml
sgx_alloc/src/: lib.rs
sgx_edl/edl/sgx_sdk_additional_include/: fcntl.h  netdb.h  sched.h
sgx_edl/edl/sgx_sdk_additional_include/netinet/: in.h  tcp.h
sgx_edl/edl/sgx_sdk_additional_include/sys/: socket.h  stat.h  struct_timespec.h  types.h  uio.h
sgx_oc/src/: lib.rs
sgx_rsrvmm/: Cargo.toml  build.rs
sgx_rsrvmm/src/: lib.rs
sgx_rsrvmm/src/rsrvmm/: mod.rs
sgx_sync/src/: lib.rs  once_lock.rs
sgx_trts/: Cargo.toml  build.rs
sgx_trts/src/: arch.rs  asm_sgx_sdk.rs  capi_sgx_sdk.rs  error.rs  lib.rs  xsave.rs
sgx_trts/src/asm/: sgx_sdk.S
sgx_trts/src/call/: mod.rs  ocall.rs
sgx_trts/src/enclave/: init.rs  mem.rs  mod.rs
sgx_trts/src/feature/: mod.rs  sys.rs
sgx_trts/src/inst/hw/: inst.rs
sgx_trts/src/inst/sim/: derive.rs  mod.rs
sgx_trts/src/sync/: lazy.rs
sgx_trts/src/tcs/: tls.rs
sgx_tstd/hashbrown/src/: lib.rs
sgx_tstd/hashbrown/src/raw/: mod.rs
sgx_tstd/src/: lib.rs  num.rs  panic.rs  panicking.rs
sgx_tstd/src/hash/: random.rs
sgx_tstd/src/io/: mod.rs  util.rs
sgx_tstd/src/prelude/: v1.rs
sgx_tstd/src/sys/: fd.rs  net.rs  os_str.rs
sgx_tstd/src/sys/common/thread_local/: os_local.rs
sgx_tstd/src/sys/personality/dwarf/: eh.rs
sgx_tstd/src/sys/unsupported/: process.rs
sgx_unwind/src/: lib.rs
tools/docker/: Dockerfile.centos8  Dockerfile.ubuntu18.04  Dockerfile.ubuntu20.04
