# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "sgx_trts"
version = "2.0.0"
authors = ["The Teaclave Authors"]
repository = "https://github.com/apache/teaclave-sgx-sdk"
license-file = "LICENSE"
documentation = "https://teaclave.apache.org/sgx-sdk-docs/"
description = "Rust SGX SDK provides the ability to write Intel SGX applications in Rust Programming Language."
edition = "2021"

[lib]
name = "sgx_trts"
crate-type = ["rlib"]

[features]
default = []
thread = []
sim = ["sgx_types/sim"]
hyper = ["sgx_types/hyper"]
use_sgx_sdk = []

[dependencies]
sgx_types = { path = "../sgx_types" }

# cannot condition to feature, as the feature is set in build.rs, *after* the dependencies resolution
# the full target name is not usable either as we need a <cfg> block to negate it,
# so we check for a custom target_abi, as defined in x86_64-sgx_sdk_linux_sgx.json
[target.'cfg(not(target_abi = "sgx_sdk"))'.dependencies]
sgx_crypto_sys = { path = "../sgx_crypto/sgx_crypto_sys" }
sgx_tlibc_sys = { path = "../sgx_libc/sgx_tlibc_sys" }
